src/test/ui/regions/regions-wf-trait-object.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/regions-wf-trait-object.rs:7:5
   |
LL |     x: Box<dyn TheTrait<'a>+'b>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime 'b as defined on the struct at 6:15
  --> $DIR/regions-wf-trait-object.rs:6:15
   |
LL | struct Foo<'a,'b> {
   |               ^^
note: but lifetime parameter must outlive the lifetime 'a as defined on the struct at 6:12
  --> $DIR/regions-wf-trait-object.rs:6:12
   |
LL | struct Foo<'a,'b> {
   |            ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0478`.
